--- a/antara.html
+++ b/antara.html
@@ -130,7 +130,7 @@
     </div>
     <!-- ##### Blog Area End ##### -->
 
-  
+
     <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
@@ -143,11 +143,11 @@
                 <div class="col-12 col-md-6">
                     <div class="footer-nav">
                         <ul>
-                            <li><a href="#" data-toggle="tooltip" data-placement="top" title="Gmail"><i class="fa fa-email" aria-hidden="true"></i></a></li>
-                            <li><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-
+                            <li><a href="mailto:marketing@dhwanicet.org" data-toggle="tooltip" data-placement="top" title="Gmail"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                            <li><a href="http://facebook.com/dhwanifest" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="http://twitter.com/dhwanifest" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="http://instagram.com/dhwanifest" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCUGXXOIJVE6jpuQY2EubYTA" data-toggle="tooltip" data-placement="top" title="Youtube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                 </div>
