--- a/graph.html
+++ b/graph.html
@@ -5,6 +5,10 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=1024">
       <title>Example 01: No CSS</title>
+      <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
       <link rel="stylesheet" href="graphstyle.css">
       <link rel="stylesheet" href="g-common.css">
    </head>
