--- a/public/index.html
+++ b/public/index.html
@@ -455,9 +455,9 @@ Being a four day event, Dhwani attracts annually an average crowd of over 40,000
     <!-- ##### Buy Now Area End ##### -->
 
     <!-- ##### Featured Artist Area Start ##### -->
-<<<<<<< HEAD
+
     <section class="featured-artist-area section-padding-100 bg-img bg-overlay bg-fixed" style="background-image: url(img/cetnight.jpg);">
-       <!-- <div class="container">
+       <div class="container">
             <div class="row align-items-end">
 
                 <div class="col-12 col-md-12 col-lg-12">
@@ -469,8 +469,8 @@ Being a four day event, Dhwani attracts annually an average crowd of over 40,000
                         </div>
                         <p>Nam tristique ex vel magna tincidunt, ut porta nisl finibus. Vivamus eu dolor eu quam varius rutrum. Fusce nec justo id sem aliquam fringilla nec non lacus. Suspendisse eget lobortis nisi, ac cursus odio. Vivamus nibh velit, rutrum at ipsum ac, dignissim iaculis ante. Donec in velit non elit pulvinar pellentesque et non eros.</p>
 
-=======
 
+</div></div></div></div></section>
 
 
        <section class="latest-albums-area section-padding-100">
@@ -494,7 +494,7 @@ Being a four day event, Dhwani attracts annually an average crowd of over 40,000
                             <div class="aspect-ratio">
                                 <canvas id="chart"></canvas>
                             </div>
->>>>>>> 2feb2a6ff36a65dae25ad7edf8aeaecb09abd65e
+
                     </div>
 
                 </div>
@@ -543,51 +543,9 @@ We hope to see you join us in bringing to Kerala what will be the biggest  cultu
             </div>
 </div>
     </section>
-    <!-- ##### Featured Artist Area End ##### -->
-
-<<<<<<< HEAD
-    <!-- ##### Miscellaneous Area Start ##### -->
-    <section class="miscellaneous-area section-padding-100-0">
-        <div class="container">
-            <div class="row">
-
-
-                <!-- ***** New Hits Songs ***** -->
-                <div class="col-12 col-lg-4">
-                    <div class="new-hits-area mb-100">
-                        <div class="section-heading text-left mb-50 wow fadeInUp" data-wow-delay="50ms">
-                            <p>See what’s new</p>
-                            <h2>New Hits</h2>
-                        </div>
-
-                        <!-- Single Top Item -->
-                        <div class="single-new-item d-flex align-items-center justify-content-between wow fadeInUp" data-wow-delay="100ms">
-                            <div class="first-part d-flex align-items-center">
-                                <div class="thumbnail">
-                                    <img src="img/bg-img/wt7.jpg" alt="">
-                                </div>
-                                <div class="content-">
-                                    <h6>Sam Smith</h6>
-                                    <p>Underground</p>
-                                </div>
-                            </div>
-                            <audio preload="auto" controls>
-                                <source src="audio/dummy-audio.mp3">
-                            </audio>
-                        </div>
-
-
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </section>
-    <!-- ##### Miscellaneous Area End ##### -->
-=======
    
->>>>>>> 2feb2a6ff36a65dae25ad7edf8aeaecb09abd65e
+
+
 
 
 
