--- a/carpedictum.html
+++ b/carpedictum.html
@@ -136,7 +136,7 @@
               <div class="row d-flex flex-wrap align-items-center">
                   <div class="col-12 col-md-6">
                       <a href="#"><img src="img/core-img/logo.png" alt=""></a>
-                      <p class="copywrite-text"><a href="https://www.cet.ac.in/"> College Of Engineering Trivandrum</p>
+                      <p class="copywrite-text"><a href="https://www.cet.ac.in/"> College Of Engineering Trivandrum</a></p>
                   </div>
 
                   <div class="col-12 col-md-6">
